# spotify-profile-dump-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml
src/spotify_dump/: __init__.py  __main__.py  auth.py  cli.py  html_generator.py  spinner.py  spotify_api.py
tests/e2e/: package.json  playwright.config.ts
tests/e2e/fixtures/: generate-html.py  sample-library.json
tests/e2e/tests/: html-dashboard-features.spec.ts  html-dashboard.spec.ts
tests/unit/: test_auth.py  test_html_generator.py  test_pagination.py  test_serializers.py  test_token_expiration.py
