[project]
name = "spotify-profile-dump"
version = "1.0.0"
description = "Export your Spotify library as a self-contained HTML dashboard"
requires-python = ">=3.10"
dependencies = ["click", "requests", "python-dotenv"]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
spotify-dump = "spotify_dump.cli:main"
